--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Rotaract of Greater Fremont</h1>
+<p>Welcome to Rotaract of Greater Fremont</p>
 </body>
 </html>
