--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Rotaract Club of Greater Fremont</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Rotaract Club of Greater Fremont</h1>
+<p>
+    <a href="https://www.meetup.com/BayAreaRotaract/events/calendar/">Calendar of Events</a>
+        <br />
+    <a href="https://www.facebook.com/groups/rotaractfremont/?ref=bookmarks">Facebook Group</a>
+        <br />
+</p>
 
 </body>
 </html>
