added links to the membership form and the universal sign in

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
                 <br />
             <a href="https://www.facebook.com/groups/rotaractfremont/?ref=bookmarks">Facebook Group</a>
                 <br />
+            <a href="https://forms.gle/ydXdCaqz1BCyHrFz8">Sign-In Sheet</a>
+                <br />
+            <a href="https://forms.gle/2mwQsWox5RBG8vbN9">Membership Application</a>
+                <br />
         </p>
     </body>
-    
+
 </html>
