modifying the spacing

--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
+<style>
+
+h1.content {
+      max-width: 550px;
+      margin: auto;
+      font-family:"Arial";
+      padding-bottom: 20px;
+    }
+
+p.content {
+      max-width: 200px;
+      margin: auto;
+      font-family:"Arial";
+    }
+
+</style>
+<body>
+
+
 <html>
+        <head>
+            <title>Rotaract Club of Greater Fremont</title>
+        </head>
 
-    <head>
-        <title>Rotaract Club of Greater Fremont</title>
-    </head>
-
-    <body>
-        <h1>Rotaract Club of Greater Fremont</h1>
-        <p>
-            <a href="https://www.meetup.com/BayAreaRotaract/events/calendar/">Calendar of Events</a>
-                <br />
-            <a href="https://www.facebook.com/groups/rotaractfremont/?ref=bookmarks">Facebook Group</a>
-                <br />
-            <a href="https://forms.gle/ydXdCaqz1BCyHrFz8">Sign-In Sheet</a>
-                <br />
-            <a href="https://forms.gle/2mwQsWox5RBG8vbN9">Membership Application</a>
-                <br />
-        </p>
-    </body>
-
+        <body>
+            <h1 class="content">Rotaract Club of Greater Fremont</h1>
+            <p class = "content">
+                <a href="https://www.meetup.com/BayAreaRotaract/events/calendar/">Calendar of Events</a>
+                    <br />
+                <a href="https://www.facebook.com/groups/rotaractfremont/?ref=bookmarks">Facebook Group</a>
+                    <br />
+                <a href="https://forms.gle/ydXdCaqz1BCyHrFz8">Sign-In Sheet</a>
+                    <br />
+                <a href="https://forms.gle/2mwQsWox5RBG8vbN9">Membership Application</a>
+                    <br />
+            </p>
+        </body>
 </html>
