--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <style>
 
+body {
+    font-size:100%;
+}
+
 h1.content {
-      max-width: 550px;
-      margin: auto;
-      font-family:"Arial";
-      padding-bottom: 20px;
+    font-size:2.5em;
+    max-width: 700px;
+    margin: auto;
+    font-family:"Arial";
+    padding-bottom: 20px;
     }
 
 p.content {
-      max-width: 200px;
-      margin: auto;
-      font-family:"Arial";
+    font-size:1.5em;
+    max-width: 200px;
+    margin: auto;
+    font-family:"Arial";
     }
 
 </style>
