initializing instructions to use reimbursement form

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@ body {
 
 h1.content {
     font-size:5em;
-    max-width: 700px;
     margin: auto;
     font-family:"Arial";
     padding-bottom: 20px;
@@ -15,7 +14,6 @@ h1.content {
 
 p.content {
     font-size:3em;
-    max-width: 700px;
     margin: auto;
     font-family:"Arial";
     }
@@ -39,6 +37,8 @@ p.content {
                 <a href="https://forms.gle/ydXdCaqz1BCyHrFz8">Sign-In Sheet</a>
                     <br />
                 <a href="https://forms.gle/2mwQsWox5RBG8vbN9">Membership Application</a>
+                    <br />
+                <a href="pages/reimbursement.html">Reimbursement Instructions</a>
                     <br />
             </p>
         </body>
