formatting edits to instructions on club reimbursement

--- a/pages/reimbursement.html
+++ b/pages/reimbursement.html
@@ -1,17 +1,59 @@
 <!DOCTYPE HTML>
+<style>
+
+body {
+    font-size:100%;
+}
+
+h1.content {
+    font-size:2em;
+    margin: auto;
+    font-family:"Arial";
+    padding-bottom: 20px;
+    }
+
+ol.content {
+    font-size:1em;
+    margin: auto;
+    font-family:"Arial";
+    }
+
+</style>
+
 <HTML>
 	<HEAD>
-		How to Fill out Reimbursement Form
+		<title>
+			Reimbursement Form
+		</title>
 	</HEAD>
 
-	<h1>
+	<h1 class = "content">
 		How to Fill Out Reimbursement Form
 	</h1>
 
 	<body>
-		<ol>
-			<li>Download this pdf</li>
-			<li>Download supporting Material</li>
+		<ol class = "content">
+			<li>
+				Download this pdf: 
+					<a href="https://drive.google.com/file/d/1_iq2gelxpz78L30AzlYFmGdzdgxg8YpB/view?usp=sharing">"Reimbursement Request Form"
+					</a>
+			</li>
+			
+			<li>
+				Reimbursements requests must include a completed "Reimbursement Request Form" and a copy of the "Invoice/Receipt" for the purchase to be reimbursed
+			</li>
+			
+			<li>
+				During a General Meeting, submit "Reimbursement Request Form" and "Invoice/Receipt" to the President
+			</li>
+			
+			<li>
+				Board will vote on approval of Reimbursement
+			</li>
+			
+			<li>
+				All disbursements from a club bank account shall be made within 7 days of approval
+			</li>
 		</ol>
 	</body>
 </HTML>
